--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,27 @@
-.vscode/**
-.vscode-test/**
+# Source files
 src/**
+!src/extension.ts
+
+# Test files
+test/**
+
+# Development files
+.vscode/**
+.git/**
 .gitignore
-.yarnrc
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/.eslintrc.json
-**/*.map
-**/*.ts
+tsconfig.json
+.eslintrc.json
+
+# Build artifacts (we only want the compiled JS)
+out/**/*.map
+out/**/*.d.ts
+
+# Documentation
+CHANGELOG.md
+
+# Development dependencies
+node_modules/**
+
+# IDE files
+.vscode-test/**
+*.vsix
