--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codeowners-visualizer",
   "displayName": "CODEOWNERS Visualizer",
   "description": "Generate an interactive tree-like graph of code ownership for folders and files in your project.",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "icon": "resources/icon.png",
   "publisher": "cmtrounce",
   "license": "MIT",
@@ -40,7 +40,7 @@
     "viewsWelcome": [
       {
         "view": "codeownersTeams",
-        "contents": "No codeowners teams. Please check if you have CODEOWNERS file in the workspace."
+        "contents": "No CODEOWNERS file found in this workspace.\n\n[Create CODEOWNERS file](command:codeownersTeams.createCodeownersFile) | [Learn more](command:codeownersTeams.openCodeownersDocs)\n\nCODEOWNERS files help teams define ownership of code and documentation. They're typically placed in the root directory, `.github/`, or `docs/` folder."
       }
     ],
     "menus": {
@@ -125,6 +125,16 @@
         "command": "codeownersTeams.exportCoverage",
         "title": "Export Coverage Report",
         "icon": "$(export)"
+      },
+      {
+        "command": "codeownersTeams.createCodeownersFile",
+        "title": "Create CODEOWNERS File",
+        "icon": "$(add)"
+      },
+      {
+        "command": "codeownersTeams.openCodeownersDocs",
+        "title": "Open CODEOWNERS Documentation",
+        "icon": "$(book)"
       },
       {
         "command": "codeownersTeams.openGitHubTeam",
