--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "codeowners-visualizer",
-  "displayName": "CODEOWNERS Visualizer",
-  "description": "Generate an interactive tree-like graph of code ownership for folders and files in your project.",
-  "version": "1.3.6",
+  "displayName": "%extension.displayName%",
+  "description": "%extension.description%",
+  "version": "1.4.0",
   "icon": "resources/icon.png",
   "publisher": "cmtrounce",
   "license": "MIT",
@@ -17,6 +17,7 @@
   "engines": {
     "vscode": "^1.82.0"
   },
+  "l10n": "./l10n",
   "categories": [
     "Other"
   ],
@@ -33,14 +34,14 @@
       "explorer": [
         {
           "id": "codeownersTeams",
-          "name": "Codeowners Teams"
+          "name": "%view.codeownersTeams.name%"
         }
       ]
     },
     "viewsWelcome": [
       {
         "view": "codeownersTeams",
-        "contents": "No CODEOWNERS file found in this workspace.\n\n[Create CODEOWNERS file](command:codeownersTeams.createCodeownersFile) | [Learn more](command:codeownersTeams.openCodeownersDocs)\n\nCODEOWNERS files help teams define ownership of code and documentation. They're typically placed in the root directory, `.github/`, or `docs/` folder."
+        "contents": "%viewsWelcome.codeownersTeams.contents%"
       }
     ],
     "menus": {
@@ -84,61 +85,67 @@
       {
         "command": "codeownersTeams.openGraph",
         "category": "Custom",
-        "title": "Open Codeowners Graph",
+        "title": "%command.openGraph.title%",
         "icon": "$(eye)"
       },
       {
         "command": "codeownersTeams.openGraphForFile",
         "category": "Custom",
-        "title": "Open Codeowners Graph for Current File",
+        "title": "%command.openGraphForFile.title%",
         "icon": "$(file-code)"
       },
       {
         "command": "codeownersTeams.downloadGraph",
         "category": "Custom",
-        "title": "Download Codeowners Graph",
+        "title": "%command.downloadGraph.title%",
         "icon": "$(cloud-download)"
+      },
+      {
+        "command": "codeownersTeams.analyzeCoverage",
+        "category": "Custom",
+        "title": "%command.analyzeCoverage.title%",
+        "icon": "$(graph)"
+      },
+      {
+        "command": "codeownersTeams.exportCoverage",
+        "category": "Custom",
+        "title": "%command.exportCoverage.title%",
+        "icon": "$(export)"
+      },
+      {
+        "command": "codeownersTeams.refreshEntries",
+        "category": "Custom",
+        "title": "%command.refreshEntries.title%",
+        "icon": "$(refresh)"
       },
       {
         "command": "codeownersTeams.pinTeam",
         "category": "Custom",
-        "title": "Pin Codeowners Team",
+        "title": "%command.pinTeam.title%",
         "icon": "$(pin)"
       },
       {
         "command": "codeownersTeams.unpinTeam",
         "category": "Custom",
-        "title": "Unpin Codeowners Team",
-        "icon": "$(pinned)"
-      },
-      {
-        "command": "codeownersTeams.refreshEntries",
-        "title": "Refresh Codeowners Teams",
-        "icon": "$(refresh)"
-      },
-      {
-        "command": "codeownersTeams.analyzeCoverage",
-        "title": "Analyze CODEOWNERS Coverage",
-        "icon": "$(graph)"
-      },
-      {
-        "command": "codeownersTeams.exportCoverage",
-        "title": "Export Coverage Report",
-        "icon": "$(export)"
+        "title": "%command.unpinTeam.title%",
+        "icon": "$(unpin)"
       },
       {
         "command": "codeownersTeams.createCodeownersFile",
-        "title": "Create CODEOWNERS File",
+        "category": "Custom",
+        "title": "%command.createCodeownersFile.title%",
         "icon": "$(add)"
       },
       {
         "command": "codeownersTeams.openCodeownersDocs",
-        "title": "Open CODEOWNERS Documentation",
+        "category": "Custom",
+        "title": "%command.openCodeownersDocs.title%",
         "icon": "$(book)"
       },
       {
         "command": "codeownersTeams.openGitHubTeam",
-        "title": "Open GitHub Team",
+        "category": "Custom",
+        "title": "%command.openGitHubTeam.title%",
         "icon": "$(github)"
       }
     ],
@@ -148,28 +155,29 @@
         "codeownersTeams.pinnedTeams": {
           "type": "array",
           "default": [],
-          "description": "Pinned CODEOWNERS teams to show at the top."
+          "description": "%configuration.pinnedTeams.description%"
         },
         "codeownersTeams.showStatusBar": {
           "type": "boolean",
           "default": false,
-          "description": "Show the current file's codeowner in the status bar."
+          "description": "%configuration.showStatusBar.description%"
         },
         "codeownersTeams.showHoverInfo": {
           "type": "boolean",
           "default": false,
-          "description": "Show codeowner information when hovering over files in the editor."
+          "description": "%configuration.showHoverInfo.description%"
         }
       }
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile && npm run lint",
+    "vscode:prepublish": "npm run build",
     "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
+    "build": "npm run compile && npm run lint",
+    "watch": "tsc -w -p ./",
     "lint": "eslint src --ext ts",
-    "test": "mocha test/**/*.test.js"
+    "test": "mocha test/**/*.test.js",
+    "package": "vsce package"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
@@ -186,6 +194,7 @@
   },
   "dependencies": {
     "@types/graphviz": "^0.0.36",
+    "@vscode/l10n": "^0.0.18",
     "graphviz": "^0.0.9",
     "which": "^4.0.0"
   }
