--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codeowners-visualizer",
   "displayName": "%extension.displayName%",
   "description": "%extension.description%",
-  "version": "1.4.0",
+  "version": "1.4.2",
   "icon": "resources/icon.png",
   "publisher": "cmtrounce",
   "license": "MIT",
@@ -18,6 +18,24 @@
     "vscode": "^1.82.0"
   },
   "l10n": "./l10n",
+  "languages": [
+    {
+      "id": "en",
+      "title": "English"
+    },
+    {
+      "id": "es",
+      "title": "Español"
+    },
+    {
+      "id": "it",
+      "title": "Italiano"
+    },
+    {
+      "id": "fr",
+      "title": "Français"
+    }
+  ],
   "categories": [
     "Other"
   ],
