--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codeowners-visualizer",
   "displayName": "%extension.displayName%",
   "description": "%extension.description%",
-  "version": "1.4.5",
+  "version": "1.5.0",
   "icon": "resources/icon.png",
   "publisher": "cmtrounce",
   "license": "MIT",
@@ -51,8 +51,12 @@
     "languages": [
       {
         "id": "codeowners",
-        "aliases": ["CODEOWNERS"],
-        "extensions": ["CODEOWNERS"],
+        "aliases": [
+          "CODEOWNERS"
+        ],
+        "extensions": [
+          "CODEOWNERS"
+        ],
         "configuration": "./languages/codeowners.language-configuration.json"
       }
     ],
@@ -63,7 +67,6 @@
         "path": "./languages/codeowners.tmLanguage.json"
       }
     ],
-
     "views": {
       "explorer": [
         {
@@ -220,6 +223,7 @@
     "package": "vsce package"
   },
   "devDependencies": {
+    "@types/minimatch": "^5.1.2",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
     "@types/vscode": "^1.82.0",
@@ -236,6 +240,7 @@
     "@types/graphviz": "^0.0.36",
     "@vscode/l10n": "^0.0.18",
     "graphviz": "^0.0.9",
+    "minimatch": "^10.0.3",
     "which": "^4.0.0"
   }
 }
