--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codeowners-visualizer",
   "displayName": "%extension.displayName%",
   "description": "%extension.description%",
-  "version": "1.5.0",
+  "version": "1.5.1-beta",
   "icon": "resources/icon.png",
   "publisher": "cmtrounce",
   "license": "MIT",
